Fix alignment of large icons

--- a/teachers_digital_platform/css/atoms/icon.less
+++ b/teachers_digital_platform/css/atoms/icon.less
@@ -4,6 +4,8 @@
 
 .a-icon__large {
     font-size: 110%;
+    position: relative;
+    top: -0.03em;
 }
 
 .a-icon__green {
